[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Camera.gd" type="Script" id=2]
[ext_resource path="res://Levels/Level2.gd" type="Script" id=3]
[ext_resource path="res://Assets/PressurePlate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Door.tscn" type="PackedScene" id=5]
[ext_resource path="res://UIcomponents/Pause.tscn" type="PackedScene" id=6]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="CubeMesh" id=11]

[sub_resource type="BoxShape" id=12]

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.639216, 0.866667, 1, 0.490196 )
metallic = 0.96
roughness = 0.15
refraction_enabled = true
refraction_scale = 0.0
refraction_texture_channel = 0

[sub_resource type="SpatialMaterial" id=14]

[sub_resource type="ProceduralSky" id=9]

[sub_resource type="Environment" id=10]
background_mode = 2
background_sky = SubResource( 9 )
ssao_quality = 0
dof_blur_far_enabled = true
dof_blur_far_distance = 30.0

[sub_resource type="BoxShape" id=15]
extents = Vector3( 4.99756, 1, 4.24287 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 2.05249, 2.82671, 1.42729 )

[node name="Level2" type="Node"]
script = ExtResource( 3 )

[node name="World" type="Spatial" parent="."]

[node name="Ground" type="StaticBody" parent="World"]
transform = Transform( 96, 0, 0, 0, 80, 0, 0, 0, 33, -24, -80, -4.18916 )

[node name="MeshInstance" type="MeshInstance" parent="World/Ground"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="World/Ground"]
shape = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( 0.797826, -0.350946, -0.490214, 0.602887, 0.464422, 0.648721, 0, -0.813111, 0.582109, 22.6294, 5.29881, 0 )
light_color = Color( 0.368627, 0.298039, 0.658824, 1 )
light_energy = 3.856
shadow_enabled = true

[node name="DirectionalLight2" type="DirectionalLight" parent="World"]
transform = Transform( 0.736754, 0.0403968, 0.674953, -0.539666, 0.636537, 0.550982, -0.407375, -0.770188, 0.490772, 22.6294, 5.29881, 11.4556 )
light_color = Color( 0.560784, 0.188235, 0.772549, 1 )
light_energy = 0.927
shadow_color = Color( 0.560784, 0.188235, 0.772549, 1 )

[node name="Wall1" type="StaticBody" parent="World"]
transform = Transform( 40, 0, 0, 0, 30, 0, 0, 0, 20, 15.8415, 16.9941, -24.1313 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0311736 )
mesh = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="World/Wall1"]
shape = SubResource( 12 )

[node name="Wall2" type="StaticBody" parent="World"]
transform = Transform( 63, 0, 0, 0, 23, 0, 0, 0, 16, -62, 23, 13 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall2"]
transform = Transform( 1, 0, -2.38114e-09, 0, 1, 0, 2.38114e-09, 0, 1, 0, 0, 0 )
mesh = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="World/Wall2"]
transform = Transform( 1, 0, -6.77763e-09, 0, 1, 0, 6.77763e-09, 0, 1, 0, 0, 0 )
shape = SubResource( 12 )

[node name="GlassWall" type="StaticBody" parent="World"]
transform = Transform( 0.6, 0, 0, 0, 1, 0, 0, 0, 1, 39, 14.9542, 2 )

[node name="MeshInstance" type="MeshInstance" parent="World/GlassWall"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="World/GlassWall"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 12 )

[node name="GlassLip" type="StaticBody" parent="World"]
transform = Transform( 0.601, 0, 0, 0, 1, 0, 0, 0, 1.1, 39, 15.9542, 2 )

[node name="MeshInstance" type="MeshInstance" parent="World/GlassLip"]
transform = Transform( 40, 0, 0, 0, 1.6, 0, 0, 0, 1, 0, -17, 0 )
mesh = SubResource( 11 )

[node name="TransparentExitWall" type="StaticBody" parent="World"]
transform = Transform( -3.87434e-08, 0, 1, 0, 1, 0, -0.0965352, 0, -4.01339e-07, 63.5614, 15.9542, -0.649513 )

[node name="MeshInstance" type="MeshInstance" parent="World/TransparentExitWall"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="World/TransparentExitWall"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 12 )

[node name="Wall4" type="StaticBody" parent="World"]
transform = Transform( 6, 0, 0, 0, 25, 0, 0, 0, 18, 66, 25, -22 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall4"]
mesh = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="World/Wall4"]
shape = SubResource( 12 )

[node name="FinishLight" type="OmniLight" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 57.6788, 9.27131, -13.0195 )
light_color = Color( 1, 0.592157, 0.117647, 1 )
light_energy = 3.862
shadow_enabled = true
omni_range = 19.009

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5403, 1.10051, 14.0191 )

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 15, 10 )
environment = SubResource( 10 )
script = ExtResource( 2 )
smooth_speed = 10.0

[node name="LevelLogic" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.03985, 0 )

[node name="Door" parent="LevelLogic" groups=["doors"] instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, -1.14138 )

[node name="PressurePlate" parent="LevelLogic" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 1, 9.28858 )

[node name="Door2" parent="LevelLogic" groups=["doors"] instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38.7, 1, -1.14138 )

[node name="PressurePlate2" parent="LevelLogic" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 39.2, 1, 9.28858 )

[node name="Door3" parent="LevelLogic" groups=["doors"] instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50.8, 1, -1.14138 )

[node name="PressurePlate3" parent="LevelLogic" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 51.2, 1, 9.28858 )

[node name="ExitDoor" parent="LevelLogic" groups=["doors"] instance=ExtResource( 5 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, 58.0335, 0.852034, -7.23301 )

[node name="OpenFinalDoorArea" type="Area" parent="LevelLogic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 56.5231, 1.30658, -3.62845 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="LevelLogic/OpenFinalDoorArea"]
shape = SubResource( 15 )

[node name="LevelCompleteArea" type="Area" parent="LevelLogic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 58.2136, 2.09632, -11.0842 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="LevelLogic/LevelCompleteArea"]
shape = SubResource( 16 )

[node name="HUD" type="Node" parent="."]

[node name="PauseMenu" parent="HUD" instance=ExtResource( 6 )]

[connection signal="crushed" from="LevelLogic/Door" to="." method="_on_Door_crushed"]
[connection signal="pressed" from="LevelLogic/PressurePlate" to="." method="_on_PressurePlate_pressed"]
[connection signal="unpressed" from="LevelLogic/PressurePlate" to="." method="_on_PressurePlate_unpressed"]
[connection signal="crushed" from="LevelLogic/Door2" to="." method="_on_Door_crushed"]
[connection signal="pressed" from="LevelLogic/PressurePlate2" to="." method="_on_PressurePlate2_pressed"]
[connection signal="unpressed" from="LevelLogic/PressurePlate2" to="." method="_on_PressurePlate2_unpressed"]
[connection signal="crushed" from="LevelLogic/Door3" to="." method="_on_Door_crushed"]
[connection signal="pressed" from="LevelLogic/PressurePlate3" to="." method="_on_PressurePlate3_pressed"]
[connection signal="unpressed" from="LevelLogic/PressurePlate3" to="." method="_on_PressurePlate3_unpressed"]
[connection signal="crushed" from="LevelLogic/ExitDoor" to="." method="_on_Door_crushed"]
[connection signal="body_entered" from="LevelLogic/OpenFinalDoorArea" to="." method="_on_OpenFinalDoorArea_body_entered"]
[connection signal="body_entered" from="LevelLogic/LevelCompleteArea" to="." method="_on_LevelCompleteArea_body_entered"]
[connection signal="retry" from="HUD/PauseMenu" to="." method="_on_PauseMenu_retry"]
